src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Additional_Llives__c</fullName>
        <label>Additional Llives</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <inlineHelpText>This represents what clinic this population be primarily accessing or what clinic was the client sold.</inlineHelpText>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>text(State__c) &amp; &quot; | &quot; &amp; Text(Region__c) &amp; &quot; | &quot; &amp; Text(Near_site_neighborhood__c)</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Near_site_neighborhood__c</fullName>
        <label>Near-site neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>237 (Middle)</fullName>
                </value>
                <value>
                    <fullName>Arlington Heights</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin (Central / Downtown)</fullName>
                </value>
                <value>
                    <fullName>Austin (North)</fullName>
                </value>
                <value>
                    <fullName>Austin (South)</fullName>
                </value>
                <value>
                    <fullName>Austin (West)</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berryessa (880 East)</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Broomfield</fullName>
                </value>
                <value>
                    <fullName>Bryant Park</fullName>
                </value>
                <value>
                    <fullName>Burbank</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Chandler</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>Chicago (Downtown)</fullName>
                </value>
                <value>
                    <fullName>Columbus Circle</fullName>
                </value>
                <value>
                    <fullName>Culver City</fullName>
                </value>
                <value>
                    <fullName>Deerfield</fullName>
                </value>
                <value>
                    <fullName>Denver (Cherry Creek)</fullName>
                </value>
                <value>
                    <fullName>Denver (Highlands Ranch)</fullName>
                </value>
                <value>
                    <fullName>Denver Tech Center</fullName>
                </value>
                <value>
                    <fullName>Design District (SF)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Boston)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Dallas)</fullName>
                </value>
                <value>
                    <fullName>Downtown (LA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEPM_Reset_Period__c</fullName>
        <description>How many months before PEPM resets.  Yearly=12, Quarterly=3, Monthly=1</description>
        <label>PEPM Reset Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEPM__c</fullName>
        <formula>TotalPrice / Quantity / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PEPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Forecast Model</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>Private Care Team</fullName>
                </value>
                <value>
                    <fullName>Shared Care Team</fullName>
                </value>
                <value>
                    <fullName>Cost+</fullName>
                    <isActive>false</isActive>
                    <label>Cost+</label>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                    <isActive>false</isActive>
                    <label>Fixed Fee</label>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                    <isActive>false</isActive>
                    <label>PEPM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <inlineHelpText>This is the product family from the price book entry</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Central CT</fullName>
                </value>
                <value>
                    <fullName>Central Florida</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Coastal CT</fullName>
                </value>
                <value>
                    <fullName>Conneticut</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>North Florida</fullName>
                </value>
                <value>
                    <fullName>North NJ</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>NY South</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Winston-Salem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Months__c</fullName>
        <inlineHelpText>This spreads the Sales Price x Quantity over the number of periods selected.  For revenue that is monthly over a 12 months period, this would be 12.</inlineHelpText>
        <label># Revenue Schedules</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Projection_Method__c</fullName>
        <label>Revenue Projection Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                    <default>true</default>
                    <label>Straight Line</label>
                </value>
                <value>
                    <fullName>S-Curve</fullName>
                </value>
                <value>
                    <fullName>S-Curve - TEST</fullName>
                    <isActive>false</isActive>
                    <label>S-Curve - TEST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Start_Date__c</fullName>
        <inlineHelpText>Represents the calculation of when this revenue line starts.</inlineHelpText>
        <label>Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_State</valueSetName>
        </valueSet>
    </fields>
</CustomObject>